@@ -7,29 +7,33 @@ module Webrat
         end
 
         def matches?(response)
-          if @content.is_a?(Regexp)
-            text_finder = "regexp:#{@content.source}"
-          else
-            text_finder = @content
-          end
-
           response.session.wait_for do
             response.selenium.is_text_present(text_finder)
           end
-          rescue Webrat::TimeoutError
-            false
+        rescue Webrat::TimeoutError => e
+          @error_message = e.message
+          false
+        end
+        
+        def does_not_match?(response)
+          response.session.wait_for do
+            !response.selenium.is_text_present(text_finder)
+          end
+        rescue Webrat::TimeoutError => e
+          @error_message = e.message
+          false
         end
 
         # ==== Returns
         # String:: The failure message.
         def failure_message
-          "expected the following element's content to #{content_message}:\n#{@element}"
+          "expected the response to #{content_message}:\n#{@error_message}"
         end
 
         # ==== Returns
         # String:: The failure message to be displayed in negative matches.
         def negative_failure_message
-          "expected the following element's content to not #{content_message}:\n#{@element}"
+          "expected the response to not #{content_message}"
         end
 
         def content_message
@@ -38,6 +42,14 @@ module Webrat
             "include \"#{@content}\""
           when Regexp
             "match #{@content.inspect}"
+          end
+        end
+        
+        def text_finder
+          if @content.is_a?(Regexp)
+            "regexp:#{@content.source}"
+          else
+            @content
           end
         end
       end
@@ -52,7 +64,7 @@ module Webrat
       # the supplied string or regexp
       def assert_contain(content)
         hc = HasContent.new(content)
-       assert hc.matches?(response), hc.failure_message
+        assert hc.matches?(response), hc.failure_message
       end
 
       # Asserts that the body of the response
